syntax = "proto3";

package anony;
option go_package="rpc";
// import "github.com/mwitkow/go-proto-validators/validator.proto";
import "google/protobuf/empty.proto";

service UserService {
    rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);
    // rpc UpdateUser (UpdateUserRequest) returns (UpdateUserResponse);
    // rpc DeleteUser (DeleteUserRequest) returns (google.protobuf.Empty);
    rpc LogInUser (LogInUserRequest) returns (LogInUserResponse);
}

/* 

    IDをResponseとして返さない -> IDはサーバー内のみで使用することとする
    理由: クライアントでIDを持っていても意味がない(DBにアクセスするための識別子であるため)
    name, emailをクライアントサイドで扱うことができれば十分
    
*/

message UserBase {
    string name = 1;
    string email = 2;
}

message CreateUserRequest {
    UserBase user = 1;
    string password = 2;
    string confirm_password = 3;
}

message CreateUserResponse {
    UserBase user = 1;
    string token = 2;
}

message LogInUserRequest {
    string nameOrEmail = 1;
    string password = 2;
}

message LogInUserResponse {
    UserBase user = 1;
    string token = 2;
}


service AnonyService {
    rpc CreateAnonyURL (CreateAnonyURLRequest) returns (CreateAnonyURLResponse);
}

message CreateAnonyURLRequest {
    string original_url = 1;
}

message CreateAnonyURLResponse {
    string original_url = 1;
    string short_url = 2;
    int64 status = 3;
}

// message UpdateUserRequest {
//     UserBase user = 1;
//     string token = 2;
// }

// message UpdateUserResponse {
//     UserBase user = 1;
// }

// message DeleteUserRequest {
//     UserBase user = 1;
//     string token = 2;
// }


// service ShortURL {
//     rpc RegisterURL (RegisterRequest) returns (RegisterResponse);
//     rpc StopURL (StopRequest) returns (StopResponse);
//     rpc StartURL (StartRequest) returns (StartResponse);
// }

// message RegisterRequest {
//     string original = 1;
// }

// message RegisterResponse {
//     string original = 1;
//     string short = 2;
//     int32 status = 3;
// }

// message StartRequest {
//     string original = 1;
// }

// message StartResponse {
//     string original = 1;
//     string short = 2;
//     int32 status = 3;
// }

// message StopRequest {
//     string original = 1;
// }

// message StopResponse {
//     string original = 1;
//     string short = 2;
//     int32 status = 3;
// }